--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,5 @@ hs_err_pid*
 # Temporary files
 tmp/
 temp/
+"src/main/resources/application-cloud.yml" 
+"src/main/resources/application-local.yml" 
