--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>api-apptdah</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
