--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,3 @@
 spring:
   profiles:
-    active: local  # Define o perfil padrão como local
+    active: cloud  # Define o perfil padrão como local
