--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,23 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
-      - minha-rede
+      - rede
+
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
+    networks:
+      - rede
+    depends_on:
+      - postgres
 
 volumes:
   postgres_data:
 
 networks:
-  minha-rede:
+  rede:
